Fix Http cache URL resolution.
Summary:
The refactoring to not pass a URL around broke anyone using paths
on their cache server. This brings back the old behavior.

Fixes #434.

Test Plan: CI